[gd_scene load_steps=8 format=2]

[ext_resource path="res://scene/tilemap.tres" type="TileSet" id=1]
[ext_resource path="res://script/Broodmother.gd" type="Script" id=2]
[ext_resource path="res://image/placeholder.jpg" type="Texture" id=3]
[ext_resource path="res://script/player.gd" type="Script" id=4]
[ext_resource path="res://image/cat.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 129.631, 86.0439 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 60.6409, 38.1771 )

[node name="Broodmother " type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( -262148, 1, 0, -327657, 1, 0, -196612, 1, 0, -262121, 1, 0, -131076, 1, 0, -196585, 1, 0, -65540, 1, 0, -131049, 1, 0, -4, 1, 0, -65513, 1, 0, 65532, 1, 0, 23, 1, 0, 131068, 1, 0, 65559, 1, 0, 196604, 1, 0, 131095, 1, 0, 262140, 1, 0, 196631, 1, 0, 327676, 1, 0, 262167, 1, 0, 393212, 1, 0, 327703, 1, 0, 458748, 1, 0, 393239, 1, 0, 524284, 1, 0, 458775, 1, 0, 589820, 1, 0, 589821, 1, 0, 589822, 1, 0, 589823, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 524311, 1, 0 )

[node name="Boss" type="KinematicBody2D" parent="."]
position = Vector2( 788.691, 420.426 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Boss"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="Boss"]
wait_time = 10.0

[node name="spawnPt1" type="Position2D" parent="Boss"]
position = Vector2( -1277.22, -398.508 )

[node name="spawnPt2" type="Position2D" parent="Boss"]
position = Vector2( -884.325, -403.808 )

[node name="spawnPt3" type="Position2D" parent="Boss"]
position = Vector2( -433.945, -407.704 )

[node name="spiderWeb" type="RayCast2D" parent="Boss"]
position = Vector2( -106.956, 3 )
rotation = -4.71239
enabled = true
cast_to = Vector2( 0, 300 )

[node name="Position2D" type="Position2D" parent="Boss"]
position = Vector2( -111.543, 27.1322 )

[node name="player" type="KinematicBody2D" parent="."]
editor/display_folded = true
position = Vector2( 204.374, 423.168 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="player"]
texture = ExtResource( 5 )
vframes = 3
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="player"]
position = Vector2( 20.5544, -108.644 )
current = true
limit_left = -260
limit_right = 2000

[node name="Timer" type="Timer" parent="player"]
wait_time = 10.0
[connection signal="timeout" from="Boss/Timer" to="Boss" method="_on_Timer_timeout"]
